--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"lodash-es": "^4.17.21",
+		"mongoose": "^6.8.4",
 		"node-fetch": "^3.3.0"
 	}
 }
